@@ -475,6 +475,8 @@ Release 0.8.0 - unreleased
 
   TASKS
 
+    TAJO-218: HiveQLAnalyzer has to support cast expression. (jaehwa)
+
     TAJO-621: Add DOAP file for Tajo. (hyunsik)
 
     TAJO-622: Add TM mark and navigation links required for TLP project.
